Additional CSS layout changes

--- a/apps-demos.html
+++ b/apps-demos.html
@@ -75,9 +75,9 @@
 
           <section class="image-servers wrapper">
             <h2>Image servers</h2>
-            <dl>
-              <dt><a href="http://www.contentdm.org/" target="_blank">ContentDM</a></dt>
-              <dd>
+            <ul>
+              <li>
+                <p class="font-weight-600"><a href="http://www.contentdm.org/" target="_blank">ContentDM</a></p>
                 <p>
                   ContentDM is a full-featured digital collection management system
                   supported by OCLC that includes image hosting and metadata management.
@@ -87,10 +87,9 @@
                   Python-based translator</a> has been produced that can make the images hosted in
                   your ContentDM installation fully IIIF compatible.
                 </p>
-              </dd>
-
-              <dt><a href="http://sourceforge.net/projects/djatoka/" target="_blank">djatoka</a></dt>
-              <dd>
+              </li>
+              <li>
+                <p class="font-weight-600"><a href="http://sourceforge.net/projects/djatoka/" target="_blank">djatoka</a></p>
                 <p>
                   djatoka is an open source, Java-based image server that provides compression and region extraction of JPEG 2000 images,
                   URI-addressability of regions, and support for multiple image formats (including., BMP, GIF, JPG, PNG, PNM, TIF, JPEG 2000). djatoka
@@ -100,10 +99,9 @@
                   djatoka is not natively IIIF-compatible.  However, djatoka URI’s are easily translated to IIIF URI’s (for example see this
                   <a href="https://github.com/jronallo/djatoka" target="_blank">Ruby on Rails gem</a> that does the translation).
                 </p>
-              </dd>
-
-              <dt><a href="http://www.fsi-viewer.com/" target="_blank">FSI Server</a></dt>
-              <dd>
+              </li>
+              <li>
+                <p class="font-weight-600"><a href="http://www.fsi-viewer.com/" target="_blank">FSI Server</a></p>
                 <p>
                   FSI Server is a popular commercial solution for serving high resolution images in multiple formats.&nbsp; It accompanies the
                   Flash-based FSI Viewer for zoom and pan.
@@ -111,10 +109,9 @@
                 <p>
                   There is a <a href="https://github.com/jhu-digital-manuscripts/rosa/tree/master/rosa-iiif-endpoint" target="_blank">IIIF adaptor for FSI server</a>.
                 </p>
-              </dd>
-
-              <dt><a href="http://iipimage.sourceforge.net/documentation/server/" target="_blank">IIPImage Server</a></dt>
-              <dd>
+              </li>
+              <li>
+                <p class="font-weight-600"><a href="http://iipimage.sourceforge.net/documentation/server/" target="_blank">IIPImage Server</a></p>
                 <p>
                   The IIPImage server is a high performance image server for streaming high resolution images. It supports advanced image
                   features such as 16 and 32 bit color depths, floating point data, CIELAB colorimetric images and scientific imagery such
@@ -126,47 +123,54 @@
                 <p>
                   IIPImage server is IIIF compatible (see the <a href="https://github.com/ruven/iipsrv/tree/iiif" target="_blank">IIIF branch</a> of the project).
                 </p>
-              </dd>
-
-              <dt><a href="https://github.com/pulibrary/loris" target="_blank">Loris</a></dt>
-              <dd>
-                Loris is an open source,  Python-based image server that supports the IIIF Image API ver 1.1.  Loris supports JPEG and TIFF sources as well as JPEG2000.
-              </dd>
-            </dl>
+              </li>
+              <li>
+                <p class="font-weight-600"><a href="https://github.com/pulibrary/loris" target="_blank">Loris</a></p>
+                <p>
+                  Loris is an open source,  Python-based image server that supports the IIIF Image API ver 1.1.  Loris supports JPEG and TIFF sources as well as JPEG2000.
+                </p>
+              </li>
+            </ul>
           </section>
 
           <section class="impl-demos wrapper">
             <h2>Implementation Demos</h2>
-            <dl>
-              <dt><a href="http://dmstech.github.io/mirador/demo/" target="_blank">Stanford University Libraries - Mirador demo</a></dt>
-              <dd>
-                This demo of Mirador, developed by the Stanford University Libraries, allows the user to compare images from several different
-                image repositories, including the Stanford Digital Repository, Yale University and Los Alamos National Labs.
-              </dd>
-
-              <dt><a href="http://libimages.princeton.edu/osd-demo/" target="_blank">Princeton University Libraries</a></dt>
-              <dd>
-                This demonstration, hosted by the Princeton University Libraries, shows an image being served by Loris and viewed using OpenSeadragon.
-              </dd>
-
-              <dt><a href="http://sanddragon.bl.uk/mirador/" target="_blank">The British Library</a></dt>
-              <dd>
-                The British Library deployed a demonstration of Mirador that allows the user to compare images from the British Library,
-                Yale University and Stanford University.  The BL adapted Mirador to display a YouTube video within the viewer that can be
-                played will inspecting images.
-              </dd>
-
-              <dt><a href="http://www.shared-canvas.org/impl/" target="_blank">Shared Canvas</a></dt>
-              <dd>
-                The Shared Canvas project has a variety of sample implementations that illustrate the power of the Shared Canvas data model
-                (which is the basis of the IIIF Metadata API).  The image servers behind the demos are IIIF compatible.
-              </dd>
-
-              <dt><a href="http://demos.biblissima-condorcet.fr/mirador/" target="_blank">Biblissima - Mirador Demo</a></dt>
-              <dd>
-                The <a href="http://www.biblissima-condorcet.fr/" target="_blank">Biblissima Project</a> is a hub for digital humanities projects in France that is focused on the written cultural heritage of the Middle Ages and the Renaissance.  They have an implementation of Mirador that currently shows content hosted at multiple institutions and will, increasingly, provide access to French content.
-              </dd>
-            </dl>
+            <ul>
+              <li>
+                <p class="font-weight-600"><a href="http://dmstech.github.io/mirador/demo/" target="_blank">Stanford University Libraries - Mirador demo</a></p>
+                <p>
+                  This demo of Mirador, developed by the Stanford University Libraries, allows the user to compare images from several different
+                  image repositories, including the Stanford Digital Repository, Yale University and Los Alamos National Labs.
+                </p>
+              </li>
+              <li>
+                <p class="font-weight-600"><a href="http://libimages.princeton.edu/osd-demo/" target="_blank">Princeton University Libraries</a></p>
+                <p>
+                  This demonstration, hosted by the Princeton University Libraries, shows an image being served by Loris and viewed using OpenSeadragon.
+                </p>
+              </li>
+              <li>
+                <p class="font-weight-600"><a href="http://sanddragon.bl.uk/mirador/" target="_blank">The British Library</a></p>
+                <p>
+                  The British Library deployed a demonstration of Mirador that allows the user to compare images from the British Library,
+                  Yale University and Stanford University.  The BL adapted Mirador to display a YouTube video within the viewer that can be
+                  played will inspecting images.
+                </p>
+              </li>
+              <li>
+                <p class="font-weight-600"><a href="http://www.shared-canvas.org/impl/" target="_blank">Shared Canvas</a></p>
+                <p>
+                  The Shared Canvas project has a variety of sample implementations that illustrate the power of the Shared Canvas data model
+                  (which is the basis of the IIIF Metadata API).  The image servers behind the demos are IIIF compatible.
+                </p>
+              </li>
+              <li>
+                <p class="font-weight-600"><a href="http://demos.biblissima-condorcet.fr/mirador/" target="_blank">Biblissima - Mirador Demo</a></p>
+                <p>
+                  The <a href="http://www.biblissima-condorcet.fr/" target="_blank">Biblissima Project</a> is a hub for digital humanities projects in France that is focused on the written cultural heritage of the Middle Ages and the Renaissance.  They have an implementation of Mirador that currently shows content hosted at multiple institutions and will, increasingly, provide access to French content.
+                </p>
+              </li>
+            </ul>
           </section>
 
         </article>
