--- a/technical-details.html
+++ b/technical-details.html
@@ -168,7 +168,7 @@
 
     <div class="footer-container">
       <footer class="wrapper">
-        Please send feedback to <a href="mailto:Please send feedback to iiif-discuss@googlegroups.com">iiif-discuss@googlegroups.com</a>
+        Please send feedback to <a href="mailto:iiif-discuss@googlegroups.com">iiif-discuss@googlegroups.com</a>
       </footer>
     </div>
 
