Changes for W3C validation

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
               <p>
                 Making the world’s image repositories interoperable and accessible
               </p>
-              <p>
-                <a href="technical-details.html"><input type="button" class="button-turquoise" value="Learn how to get started"></a>
-                <a href="#try-it"><input type="button" class="button-turquoise" value="Try It"></a>
+              <p class="buttons">
+                <a class="button-turquoise" href="technical-details.html">Learn how to get started</a>
+                <a class="button-turquoise" href="#try-it">Try It</a>
               </p>
             </div>
           </header>
