--- a/technical-details.html
+++ b/technical-details.html
@@ -46,12 +46,8 @@
           </header>
 
           <section class="wrapper section-quick-links">
-            <a href="http://www-sul.stanford.edu/iiif/image-api/1.1/" target="_blank">
-              <input type="button" class="button-turquoise" value="IIIF Image API 1.1">
-            </a>
-            <a href="http://www.shared-canvas.org/datamodel/iiif/metadata-api.html" target="_blank">
-              <input type="button" class="button-turquoise" value="IIIF Metadata API 1.0">
-            </a>
+            <a class="button-turquoise" href="http://www-sul.stanford.edu/iiif/image-api/1.1/" target="_blank">IIIF Image API 1.1</a>
+            <a class="button-turquoise" href="http://www.shared-canvas.org/datamodel/iiif/metadata-api.html" target="_blank">IIIF Metadata API 1.0</a>
           </section>
 
           <section class="quick-start wrapper">
