--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               </div>
 
               <div class="container-image">
-                <img src="" alt="">
+                <img src="" alt="" src="https://stacks.stanford.edu/image/iiif/ff139pd0160%252FK90113-43/2325,1300,800,800/400,400/0/native.jpg">
               </div>
               <span class="main-interactive-img-info">God creates heaven and earth, from a Bible historiale; Genesis to Psalms.  British Library, Royal 19 D. iii, vol. 1, f. 3.</span>
             </div>
