--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
               <div class="try-it" style="clear: both;">
                 <div class="label">
-                  <h2><a id="try-it" name="try-it">Try it</a></h2>
+                  <h2><a id="try-it">Try it</a></h2>
                 </div>
 
                 <ul class="iiif-url">
