--- a/community.html
+++ b/community.html
@@ -83,6 +83,7 @@
               </dd>
             </dl>
           </section>
+        </article>  
       </div> <!-- #main -->
     </div> <!-- #main-container -->
 
