Added new styles to technical-details buttons

--- a/technical-details.html
+++ b/technical-details.html
@@ -45,7 +45,7 @@
             </div>
           </header>
 
-          <section class="wrapper section-quick-links">
+          <section class="section-quick-links">
             <a class="button-turquoise" href="http://www-sul.stanford.edu/iiif/image-api/1.1/" target="_blank">IIIF Image API 1.1</a>
             <a class="button-turquoise" href="http://www.shared-canvas.org/datamodel/iiif/metadata-api.html" target="_blank">IIIF Metadata API 1.0</a>
           </section>
