--- a/technical-details.html
+++ b/technical-details.html
@@ -65,8 +65,8 @@
             </ol>
           </section>
 
+          <!-- Step 2 -->
           <section class="step step-1 wrapper">
-            <!-- <span class="step-box">Step 1</span> -->
             <h2>Deploy an image server</h2>
             <p>
               In this step you will either deploy an image server for the first time, or adapt your existing image server to
@@ -110,8 +110,8 @@
             </p>
           </section>
 
+          <!-- Step 2 -->
           <section class="step step-2 wrapper">
-            <!-- <span class="step-box">Step 2</span> -->
             <h2>Publish metadata</h2>
             <p>
               Now that you have an image server that delivers IIIF-compliant image URI’s, you need to publish metadata about your
@@ -119,8 +119,8 @@
             </p>
           </section>
 
+          <!-- Step 3 -->
           <section class="step step-3 wrapper">
-            <!-- <span class="step-box">Step 3</span> -->
             <h2>Deploy and integrate software</h2>
             <p>
               Now that you have an image server and published metadata its time to deploy software that makes use of the IIIF technology stack.  Ultimately
