--- a/technical-details.html
+++ b/technical-details.html
@@ -144,8 +144,8 @@
             <h2>Implementation Tips &amp; Tricks</h2>
             <ul>
               <li>
-                Both the image api <a href="http://www-sul.stanford.edu/iiif/image-api/1.1/#info" target="_blank">Image Information Request</a> and the metadata
-                api are expressed as <a href="http://json-ld.org/" target="_blank">JSON-LD</a> serializations.
+                Both the Image API <a href="http://www-sul.stanford.edu/iiif/image-api/1.1/#info" target="_blank">Image Information Request</a> and the Metadata
+                API are expressed as <a href="http://json-ld.org/" target="_blank">JSON-LD</a> serializations.
               </li>
               <li>
                 The goal of IIIF is to make your image resources available to web applications hosted on other domains.  Since most of the image viewers use javascript,
