--- a/technical-details.html
+++ b/technical-details.html
@@ -149,7 +149,7 @@
               </li>
               <li>
                 The goal of IIIF is to make your image resources available to web applications hosted on other domains.  Since most of the image viewers use javascript,
-                your image server will need to support <a href="http://enable-cors.org/" target="_blank">cross origin resource sharing</a>.
+                your image server will need to support <a href="http://enable-cors.org/" target="_blank">cross-origin resource sharing (CORS)</a>.
               </li>
             </ul>
           </section>
