--- a/apps-demos.html
+++ b/apps-demos.html
@@ -39,8 +39,10 @@
     <div class="main-container">
       <div class="sub-pages clearfix">
         <article>
-          <header class="wrapper">
-            <h1>Apps &amp; Demos</h1>
+          <header>
+            <div class="wrapper">
+              <h1>Apps &amp; Demos</h1>
+            </div>
           </header>
 
           <section class="image-viewers wrapper">
