--- a/community.html
+++ b/community.html
@@ -39,16 +39,19 @@
     <div class="main-container">
       <div class="sub-pages clearfix">
         <article>
-          <header class="wrapper">
-            <h1>Community</h1>
+          <header>
+            <div class="wrapper">
+              <h1>Community</h1>
+            </div>
           </header>
+
 
           <section class="get-involved wrapper">
             <h2>How to get involved</h2>
             <p>
               We welcome any organization or individual interested in adopting the IIIF, developing software to support it, or giving
               feedback on the effort to join our discussion list at:
-            </p>              
+            </p>
             <dl>
               <dt></dt>
               <dd class="url"><a href="https://groups.google.com/forum/#!forum/iiif-discuss" target="_blank">https://groups.google.com/forum/#!forum/iiif-discuss</a></dd>
@@ -83,7 +86,7 @@
               </dd>
             </dl>
           </section>
-        </article>  
+        </article>
       </div> <!-- #main -->
     </div> <!-- #main-container -->
 
