CSS changes to community page

--- a/community.html
+++ b/community.html
@@ -54,7 +54,9 @@
             </p>
             <dl>
               <dt></dt>
-              <dd class="url"><a href="https://groups.google.com/forum/#!forum/iiif-discuss" target="_blank">https://groups.google.com/forum/#!forum/iiif-discuss</a></dd>
+              <dd class="url">
+                <pre><a href="https://groups.google.com/forum/#!forum/iiif-discuss" target="_blank">https://groups.google.com/forum/#!forum/iiif-discuss</a></pre>
+              </dd>
             </dl>
           </section>
 
