More CSS changes to community page

--- a/community.html
+++ b/community.html
@@ -66,27 +66,24 @@
               The IIIF community consists of a growing number of cultural heritage institutions and open source software projects
               committed to sharing and displaying image resources across repositories and the web.  Participating institutions include:
             </p>
-            <dl>
-              <dt></dt>
-              <dd>
-                ARTstor <br/>
-                <a href="http://www.biblissima-condorcet.fr/" target="_blank">Biblissima</a> <br/>
-                Bodleian Libraries, Oxford University <br/>
-                British Library <br/>
-                Codices Electronici Sangallenses <br/>
-                Cornell University <br/>
-                Harvard University <br/>
-                Johns Hopkins University <br/>
-                La Bibliothèque nationale de France <br/>
-                Los Alamos National Laboratory <br/>
-                Nasjonalbiblioteket (National Library of Norway) <br/>
-                Princeton University <br/>
-                St. Louis University, TPEN <br/>
-                Stanford University <br/>
-                TextGrid <br/>
-                Yale University
-              </dd>
-            </dl>
+            <ul>
+                <li>ARTstor</li>
+                <li><a href="http://www.biblissima-condorcet.fr/" target="_blank">Biblissima</a></li>
+                <li>Bodleian Libraries, Oxford University</li>
+                <li>British Library</li>
+                <li>Codices Electronici Sangallenses</li>
+                <li>Cornell University</li>
+                <li>Harvard University</li>
+                <li>Johns Hopkins University</li>
+                <li>La Bibliothèque nationale de France</li>
+                <li>Los Alamos National Laboratory</li>
+                <li>Nasjonalbiblioteket (National Library of Norway)</li>
+                <li>Princeton University</li>
+                <li>St. Louis University, TPEN</li>
+                <li>Stanford University</li>
+                <li>TextGrid</li>
+                <li>Yale University</li>
+            </ul>
           </section>
         </article>
       </div> <!-- #main -->
