--- a/technical-details.html
+++ b/technical-details.html
@@ -10,12 +10,12 @@
     <meta name="description" content="Interoperability Interoperability Image Framework : A community driven image framework with well defined APIs for making the world's image repositories interoperable and accessible">
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="/css/normalize.min.css">
     <link href='http://fonts.googleapis.com/css?family=Raleway:100,300,500' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,400italic,600,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
 
-    <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    <script src="/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
   </head>
   <body>
     <!--[if lt IE 7]>
@@ -46,7 +46,7 @@
           </header>
 
           <section class="section-quick-links">
-            <a class="button-turquoise" href="http://www-sul.stanford.edu/iiif/image-api/1.1/" target="_blank">IIIF Image API 1.1</a>
+            <a class="button-turquoise" href="image-api" target="_blank">IIIF Image API 1.1</a>
             <a class="button-turquoise" href="http://www.shared-canvas.org/datamodel/iiif/metadata-api.html" target="_blank">IIIF Metadata API 1.0</a>
           </section>
 
