Refactored CSS for top-level pages

--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
       </header>
     </div>
 
-    <div class="main-container">
-      <div class="sub-pages about clearfix">
+    <div class="sub-pages-container">
+      <div class="about clearfix">
         <article>
           <header>
             <div class="wrapper">
