--- a/apps-demos.html
+++ b/apps-demos.html
@@ -36,8 +36,8 @@
       </header>
     </div>
 
-    <div class="main-container">
-      <div class="sub-pages clearfix">
+    <div class="sub-pages-container">
+      <div class="clearfix">
         <article>
           <header>
             <div class="wrapper">
