--- a/community.html
+++ b/community.html
@@ -36,15 +36,14 @@
       </header>
     </div>
 
-    <div class="main-container">
-      <div class="sub-pages clearfix">
+    <div class="sub-pages-container">
+      <div class="community clearfix">
         <article>
           <header>
             <div class="wrapper">
               <h1>Community</h1>
             </div>
           </header>
-
 
           <section class="get-involved wrapper">
             <h2>How to get involved</h2>
