Minor CSS changes

--- a/technical-details.html
+++ b/technical-details.html
@@ -36,8 +36,8 @@
       </header>
     </div>
 
-    <div class="main-container">
-      <div class="sub-pages technical-details clearfix">
+    <div class="sub-pages-container">
+      <div class="technical-details clearfix">
         <article>
           <header>
             <div class="wrapper">
