--- a/apps-demos.html
+++ b/apps-demos.html
@@ -27,10 +27,10 @@
         <a class="title" title="IIIF : International Image Interoperability Framework" href="/">Home</a>
         <nav>
           <ul>
-            <li><a href="about.html">About</a></li>
-            <li><a href="technical-details.html">Technical Details</a></li>
-            <li><a class="is-selected" href="apps-demos.html">Apps &amp; Demos</a></li>
-            <li><a href="community.html">Community</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/technical-details.html">Technical Details</a></li>
+            <li><a class="is-selected" href="/apps-demos.html">Apps &amp; Demos</a></li>
+            <li><a href="/community.html">Community</a></li>
           </ul>
         </nav>
       </header>
