Added missing anchor

--- a/image-api/index.html
+++ b/image-api/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>IIIF | International Image Interoperability Framework &rsaquo; Community</title>
+    <title>IIIF | International Image Interoperability Framework &rsaquo; Image API 1.1</title>
     <meta name="description" content="Interoperability Interoperability Image Framework : A community driven image framework with well defined APIs for making the world's image repositories interoperable and accessible">
     <meta name="viewport" content="width=device-width">
 
@@ -710,7 +710,7 @@
 
 
           <!-- 5. Image Information Request -->
-          <section class="wrapper" id="">
+          <section class="wrapper image-info-request" id="image-info-request">
             <h2>5. Image Information Request <a href="#toc"><img class="to-toc" src="/img/image-api/icon-toc.png" alt=""></a></h2>
 
             <p>
